finished login page (ugly and not maintainable)

--- a/views/partials/layout.pug
+++ b/views/partials/layout.pug
@@ -7,7 +7,5 @@ html
         link(rel="stylesheet", href="/styles/output.css")
         script(src="/scripts/index.js" defer)
         block scripts
-    body(class="flex flex-col h-dvh justify-center items-center")
-        header
+    body(class="font-display h-screen")
         block content
-        footer
