--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -590,6 +590,48 @@ video {
   }
 }
 
+.btn-primary{
+  width: 100%;
+  flex-grow: 1;
+  border-radius: 0.375rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(49 87 218 / var(--tw-bg-opacity, 1));
+  padding: 0.5rem;
+  font-size: 1rem;
+  font-weight: 600;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.btn-primary:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 61 155 / var(--tw-bg-opacity, 1));
+}
+
+.input-primary{
+  border-radius: 0.375rem;
+  border-width: 1px;
+  border-style: solid;
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.input-primary:focus{
+  outline-style: solid;
+  outline-width: 2px;
+  outline-offset: -1px;
+  outline-color: #3157DA;
+}
+
 .visible{
   visibility: visible;
 }
@@ -618,11 +660,6 @@ video {
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
-}
-
-.my-\[-15px\]{
-  margin-top: -15px;
-  margin-bottom: -15px;
 }
 
 .my-\[-20px\]{
@@ -656,14 +693,6 @@ video {
 
 .mt-2{
   margin-top: 0.5rem;
-}
-
-.mt-\[-5px\]{
-  margin-top: -5px;
-}
-
-.mt-\[-15px\]{
-  margin-top: -15px;
 }
 
 .block{
@@ -1106,10 +1135,6 @@ video {
   line-height: 1.75rem;
 }
 
-.text-\[\.9rem\]{
-  font-size: .9rem;
-}
-
 .font-bold{
   font-weight: 700;
 }
@@ -1158,11 +1183,6 @@ video {
   color: rgb(49 87 218 / var(--tw-text-opacity, 1));
 }
 
-.text-white{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
 .text-red-500{
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity, 1));
@@ -1173,30 +1193,31 @@ video {
   color: rgb(220 38 38 / var(--tw-text-opacity, 1));
 }
 
+.text-red-700{
+  --tw-text-opacity: 1;
+  color: rgb(185 28 28 / var(--tw-text-opacity, 1));
+}
+
 .text-red-800{
   --tw-text-opacity: 1;
   color: rgb(153 27 27 / var(--tw-text-opacity, 1));
 }
 
-.text-red-700{
+.text-white{
   --tw-text-opacity: 1;
-  color: rgb(185 28 28 / var(--tw-text-opacity, 1));
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
 .underline{
   text-decoration-line: underline;
 }
 
-.decoration-2{
-  text-decoration-thickness: 2px;
-}
-
 .decoration-1{
   text-decoration-thickness: 1px;
 }
 
-.underline-offset-4{
-  text-underline-offset: 4px;
+.decoration-2{
+  text-decoration-thickness: 2px;
 }
 
 .underline-offset-1{
@@ -1205,6 +1226,10 @@ video {
 
 .underline-offset-2{
   text-underline-offset: 2px;
+}
+
+.underline-offset-4{
+  text-underline-offset: 4px;
 }
 
 .shadow-sm{
@@ -1240,8 +1265,6 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
-
-/* CSS IMPORTS */
 
 /* DESIGN */
 
