--- a/views/partials/layout.pug
+++ b/views/partials/layout.pug
@@ -1,10 +1,11 @@
 doctype html
 html
     head
-        title Express base template
+        title Vault.
         meta(charset="utf-8")
         meta(name="viewport", content="width=device-width, initial-scale=1")
         link(rel="stylesheet", href="/styles/output.css")
+        link(rel="shortcut icon", href="/assets/icon.svg", type="image/x-icon")
         script(src="/scripts/index.js" defer)
         block scripts
     body(class="font-display h-screen")
